--- a/src/WebUI/ClientApplication/src/styles/_base.scss
+++ b/src/WebUI/ClientApplication/src/styles/_base.scss
@@ -47,6 +47,9 @@
 
     --color-grey-font: rgb(107, 107, 107);
     --color-grey-background: #f8f9fc;
+
+    --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3);
+    --shadow-light: 0 0 .6rem rgb(180, 179, 179);
 }
 
 
