--- a/src/WebUI/ClientApplication/src/styles/_layout.scss
+++ b/src/WebUI/ClientApplication/src/styles/_layout.scss
@@ -194,3 +194,43 @@
         }
     }
 }
+
+
+// TIMER
+
+.timer {
+    display: flex;
+    padding: 20px 40px; 
+    justify-content: space-between;
+    box-shadow: var(--shadow-dark);
+
+    &__project-choice {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        select {
+            width: 200px;
+            margin: 0 0 0 30px;            
+        }
+
+        &__text {
+            font-size: 30px;
+        }
+    }
+
+    &__info {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 200px;
+
+        &__time {
+            font-size: 22px;
+        }
+    }
+}
+
+.activity-heading {
+    margin: 50px 0 20px 0;
+}
