--- a/src/WebUI/ClientApplication/src/styles/_layout.scss
+++ b/src/WebUI/ClientApplication/src/styles/_layout.scss
@@ -25,6 +25,7 @@
     left: 0;
     background-color: var(--color-blue-dark);
     overflow-x: hidden;
+    padding: 0;
 }
 
 .navbar-menu {
@@ -60,19 +61,22 @@
 
 .navbar-brand {
     text-align: center;
-    background-color: var(--color-blue-main-darker);
+    //background-color: var(--color-blue-main-darker);
+    background-color: var(--color-blue-darker);
+    height: 65px;
     position: relative;
     margin-bottom: 20px;
 
     &__title {
         font-size: 20px;
         color: #fff;
-        margin: 20px;
+        margin-bottom: 20px;
+        padding-top: 20px;
     }
 
     &__icon {
         position: absolute;
-        top: -15px;
+        top: 5px;
         left: 17px;
     }
 }
@@ -85,6 +89,8 @@
     background-color: #fff;
     align-items: center;
     padding: 16px 50px;
+    box-shadow: var(--shadow-dark);
+    border-bottom: 1px solid rgb(233, 233, 233);
 
     &:hover {
         cursor: pointer;
