Allow users to change username

--- a/src/WebUI/ClientApplication/src/app/home/home.component.html
+++ b/src/WebUI/ClientApplication/src/app/home/home.component.html
@@ -21,7 +21,7 @@
                 </a>
             </li>
             <li class="navbar-menu__item">
-                <a href="#" class="navbar-menu__link">
+                <a [routerLink]="['/app/settings']" routerLinkActive="navbar-menu__active" class="navbar-menu__link">
                     <i class="material-icons navbar-menu__item__icon">perm_data_setting</i>Settings
                 </a>
             </li>
