--- a/src/WebUI/ClientApplication/src/styles/_layout.scss
+++ b/src/WebUI/ClientApplication/src/styles/_layout.scss
@@ -245,3 +245,14 @@
 .activities {
     margin: 40px 0 80px 0;
 }
+
+
+// SETTINGS
+
+.settings-section {
+
+    p {
+        margin: 20px 0 10px 0;
+        font-size: 20px;
+    }
+}
